Implementazione API change pdnd
